--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Ahmed Hany</h2>
     <h2>Hania Elwakeel</h2>
     <h2>yasmine Ashraf</h2>
-    <h2>Marwan Mohamed</h2>
+    <h2>Marwan Mohammed</h2>
     <h2>doneeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</h2>
 </body>
 </html>
